# cesi-microservices

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
gokit-sum-svc1/: main.go
gokit-sum-svc2/: instrumenting.go  logging.go  main.go  service.go  transport.go
node-rpc-mosquitto/: client.js  package.json  pnpm-lock.yaml  server.js
node-rpc-mosquitto/proto/: transformer.proto
node_red-multiservices/: package.json  pnpm-lock.yaml
node_red-multiservices/server/: .config.runtime.json  .flows.json.backup  flows.json  flows_cred.json
node_red-multiservices/service2/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .flows.json.backup  flows.json  flows_cred.json
rpc/: Cargo.toml  build.rs
rpc/src/: client.rs  server.rs
rust-rpc-todo/: Cargo.toml
rust-rpc-todo/src/: client.rs
rust-rpc/proto/: todo.proto
rust-sum/: Cargo.toml
somme/src/: main.rs
src/: main.rs
