[package]
name = "grpc-server"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
mosquitto-client = "0.1.5"

prost = "0.10.4"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
